[package]
name = "icns"
version = "0.3.2"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>", "FabianLars <fabianlars@fabianlars.de>"]
description = "A library for encoding/decoding Apple Icon Image (.icns) files."
repository = "https://github.com/FabianLars/rust-icns"
keywords = ["icns", "icon", "image"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
png = { version = "0.16", optional = true }

[features]
default = ["pngio"]
pngio = ["png"]
