[package]
name = "tauri-icns"
version = "0.1.0"
authors = [
  "Matthew D. Steele <mdsteele@alum.mit.edu>",
  "Tauri Programme within The Commons Conservancy"
]
description = "A library for encoding/decoding Apple Icon Image (.icns) files."
repository = "https://github.com/tauri-apps/rust-icns"
keywords = [ "icns", "icon", "image" ]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
png = { version = "0.17", optional = true }

[features]
default = [ "pngio" ]
pngio = [ "png" ]
